// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slider labels should be rendered in horisontal slider with labelContainer and LabelPosition.Before 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-1 {
  width: 100%;
  margin-bottom: 12px;
  padding: 0 calc(32px / 2);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      />
    </div>
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should be rendered in vertical slider with labelContainer and LabelPosition.After 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin-left: 12px;
  padding: calc(32px / 2) 0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should be rendered in vertical slider with labelContainer and LabelPosition.Before 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin-right: 12px;
  padding: calc(32px / 2) 0;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
      />
    </div>
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should not render labels by default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

<div
    class="emotion-0"
    data-testid="slider"
  >
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render custom component min, max labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-right: 8px;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-left: 8px;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      <span>
        0
      </span>
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      <span>
        100
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render horizontal labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-right: 8px;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-left: 8px;
}

.emotion-1 svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      100
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render max label 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-left: 8px;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-1"
    data-testid="slider"
  >
    <div>
      react-range
    </div>
    <div
      class="emotion-0"
      data-testid="max-label"
    >
      0
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render min label 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  position: relative;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-right: 8px;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-1"
    data-testid="slider"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider labels should render vertical labels 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-top: 8px;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  margin-bottom: 8px;
}

.emotion-1 svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  color: #9c9c9c;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-2"
    data-testid="slider"
  >
    <div
      class="emotion-0"
      data-testid="min-label"
    >
      0
    </div>
    <div>
      react-range
    </div>
    <div
      class="emotion-1"
      data-testid="max-label"
    >
      100
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render custom aria-label slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  border-style: none;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="my custom aria label"
    class="emotion-0"
    data-testid="slider-thumb"
    values="25"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render custom label component slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  border-style: none;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-0"
    data-testid="slider-thumb"
    values="10,20,30"
  >
    <span />
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render default StyledThumbValue with custom $thumbSize prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  background-color: red;
  border-radius: borderRadiusRounded020;
  top: -32px;
  position: absolute;
  background-color: transparent;
  white-space: nowrap;
  width: 100%;
  text-align: center;
}

<div
    class="emotion-0"
  >
    test
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render dragged slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  border-style: none;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-0"
    data-testid="slider-thumb"
    values="25"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render multiple index slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: inherit;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  border-style: none;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-0"
    data-testid="slider-thumb"
    values="10,20,30"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render range label slider thumb 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  top: -32px;
  position: absolute;
  background-color: transparent;
  white-space: nowrap;
  width: 100%;
  text-align: center;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-1"
    data-testid="slider-thumb"
    values="25"
  >
    <div
      class="emotion-0"
    >
      25
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render undragged slider thumb 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-0:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  border-style: none;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-0"
    data-testid="slider-thumb"
    values="25"
  />
</DocumentFragment>
`;

exports[`slider react-range Range function props renderThumb should render vertical slider thumb 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #0A68C1;
  border-color: #0A68C1;
  border-width: 1px;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  cursor: pointer;
}

.emotion-1 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-1:hover:not(:disabled) {
  background-color: #02509B;
}

.emotion-1:active:not(:disabled) {
  background-color: #01396E;
}

.emotion-1:active:not(:disabled) svg {
  fill: #535353;
  color: #535353;
}

.emotion-1:disabled {
  border-style: none;
}

.emotion-1:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #535353;
  right: -40px;
  position: absolute;
  background-color: transparent;
  white-space: nowrap;
  width: 100%;
  text-align: center;
}

.emotion-0 svg {
  fill: #535353;
  color: #535353;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    aria-label="slider"
    class="emotion-1"
    data-testid="slider-thumb"
    values="25"
  >
    <div
      class="emotion-0"
    >
      25
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render default slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render disabled slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    disabled=""
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render disabled slider track 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: not-allowed;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    disabled=""
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render grabbed slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
  cursor: grabbing;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render multi-thumb slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: inherit;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2 - 12px/2) calc(32px/2);
  height: 12px;
  width: 100%;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="10,20"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`slider react-range Range function props renderTrack should render vertical slider track 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  box-sizing: border-box;
  background-color: #f0f0f0;
  border-radius: 20rem;
  margin: calc(32px/2) calc(32px/2 - 12px/2);
  height: 100%;
  width: 12px;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
}

<div
    class="emotion-0"
    data-testid="slider-track"
    values="25"
  >
    <div>
      children
    </div>
  </div>
</DocumentFragment>
`;
